--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -51,7 +51,8 @@
 }
 
 .description {
-  margin: 4rem 0;
+  margin-top: 0;
+  margin-bottom: 2rem;
   line-height: 1.5;
   font-size: 1.5rem;
 }
@@ -82,7 +83,15 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  max-width: 400px;
+  width: 80%;
+  min-height: 200px;
+}
+
+@media(min-width: 704px) {
+  .card {
+    width: 45%;
+  }
 }
 
 .card:hover,
